@@ -155,6 +155,16 @@ check-mdoc-export-html: check-monodocer mdoc.exe
 		Test/en.expected.importslashdoc
 	diff --exclude=.svn -rup Test/html.expected Test/html.actual
 
+check-mdoc-export-html-with-version: mdoc.exe
+	rm -Rf Test/html.actual.v0 Test/html.actual.since-with-v0 .v0.txt .v2.txt
+	$(MONO) mdoc.exe export-html -o Test/html.actual.v0 \
+		Test/en.expected
+	$(MONO) mdoc.exe export-html -o Test/html.actual.since-with-v0 \
+		Test/en.expected.since -with-version 0.0.0.0
+	(cd Test/html.actual.v0            && find . -type f) | sort > .v0.txt
+	(cd Test/html.actual.since-with-v0 && find . -type f) | sort > .v2.txt
+	diff -rup .v0.txt .v2.txt   # assert no types added
+
 check-md-html-dir: mdoc.exe
 	rm -Rf Test/html.actual
 	$(MONO) mdoc.exe export-html -dest:Test/html.actual $(DIR) 
@@ -201,6 +211,7 @@ check-doc-tools: check-monodocer-since \
 	check-monodocer-importslashdoc \
 	check-monodocer \
 	check-mdoc-export-html \
+	check-mdoc-export-html-with-version \
 	check-mdoc-export-msxdoc \
 	check-mdoc-validate
 
