@@ -25,6 +25,7 @@ class MDocToHtmlConverterOptions {
 	public string template;
 	public bool   dumptemplate;
 	public bool   forceUpdate;
+	public List<string> versions = new List<string> ();
 }
 
 class MDocToHtmlConverter : MDocCommand {
@@ -53,6 +54,12 @@ class MDocToHtmlConverter : MDocCommand {
 					"files.  If not specified, uses the template generated by " + 
 					"--default-template.",
 				v => opts.template = v },
+			{ "with-version=",
+				"The assembly VERSION to generate documentation for.  This allows " + 
+					"display of a subset of types/members that correspond to the given " +
+					"assembly version.  May be specified multiple times.  " + 
+					"If not specified, all versions are displayed.",
+				v => opts.versions.Add (v) }
 		};
 		List<string> extra = Parse (p, args, "export-html", 
 				"[OPTIONS]+ DIRECTORIES",
@@ -158,6 +165,7 @@ class MDocToHtmlConverter : MDocCommand {
 
 				XmlDocument typexml = new XmlDocument();
 				typexml.Load(typefile);
+				PreserveMembersInVersions (typexml);
 				if (extensions != null) {
 					DocLoader loader = CreateDocLoader (overview);
 					XmlDocUtils.AddExtensionMethods (typexml, extensions, loader);
@@ -364,11 +372,35 @@ class MDocToHtmlConverter : MDocCommand {
 				dest.AppendChild (nsd);
 			}
 			foreach (XmlNode t in ns.ChildNodes) {
+				if (!TypeInVersions (sourceDirectory, n, t))
+					continue;
 				var c = dest.OwnerDocument.ImportNode (t, true);
 				AddAttribute (c, "SourceDirectory", sourceDirectory);
 				nsd.AppendChild (c);
 			}
+			if (nsd.ChildNodes.Count == 0)
+				dest.RemoveChild (nsd);
 		}
+	}
+
+	static bool TypeInVersions (string sourceDirectory, string ns, XmlNode type)
+	{
+		if (opts.versions.Count == 0)
+			return true;
+		var file = Path.Combine (Path.Combine (sourceDirectory, ns), type.Attributes ["Name"].Value + ".xml");
+		if (!File.Exists (file))
+			return false;
+		XPathDocument doc;
+		using (var s = File.OpenText (file))
+			doc = new XPathDocument (s);
+		return MemberInVersions (doc.CreateNavigator ().SelectSingleNode ("/Type"));
+	}
+
+	static bool MemberInVersions (XPathNavigator nav)
+	{
+		return nav.Select ("AssemblyInfo/AssemblyVersion")
+			.Cast<object> ()
+			.Any (v => opts.versions.Contains (v.ToString ()));
 	}
 
 	static void AddAttribute (XmlNode self, string name, string value)
@@ -382,6 +414,20 @@ class MDocToHtmlConverter : MDocCommand {
 	{
 		return !opts.forceUpdate && File.Exists (dest) &&
 			File.GetLastWriteTime (source) < File.GetLastWriteTime (dest);
+	}
+
+	private static void PreserveMembersInVersions (XmlDocument doc)
+	{
+		if (opts.versions.Count == 0)
+			return;
+		var remove = new List<XmlNode>();
+		foreach (XmlNode m in doc.SelectNodes ("/Type/Members/Member")) {
+			if (!MemberInVersions (m.CreateNavigator ()))
+				remove.Add (m);
+		}
+		XmlNode members = doc.SelectSingleNode ("/Type/Members");
+		foreach (var m in remove)
+			members.RemoveChild (m);
 	}
 }
 
